--- a/index.html
+++ b/index.html
@@ -9,14 +9,33 @@
 
 <body>
     <h1>Task Navigation</h1>
-    <ul>
-        <li><a href="https://mdhanush11923.github.io/word-counter-app/">Task 1 word-counter app</a></li>
-        <li><a href="https://mdhanush11923.github.io/calculator-app/">Task 2 calculator app</a></li>
-        <li><a href="https://mdhanush11923.github.io/colorpicker/">Task 3 colorpicker app</a></li>
-        <li><a href="https://mdhanush11923.github.io/age-calculator-app/">Task 4 age calculator app</a></li>
-        <li><a href="https://mdhanush11923.github.io/user-table-app/">Task 5 user table app</a></li>
-        <li><a href="task6.html">Task 6</a></li>
-    </ul>
+   <table>
+        <tr>
+            <td><a href="https://mdhanush11923.github.io/word-counter-app/">Task 1 Word Counter App</a></td>
+            <td><a href="https://github.com/mdhanush11923/word-counter-app/">Task 1 Word Counter GitHub</a></td>
+        </tr>
+        <tr>
+            <td><a href="https://mdhanush11923.github.io/calculator-app/">Task 2 Calculator App</a></td>
+            <td><a href="https://github.com/mdhanush11923/calculator-app/">Task 2 Calculator GitHub</a></td>
+        </tr>
+        <tr>
+            <td><a href="https://mdhanush11923.github.io/colorpicker/">Task 3 Color Picker App</a></td>
+            <td><a href="https://github.com/mdhanush11923/colorpicker/">Task 3 Color Picker GitHub</a></td>
+        </tr>
+        <tr>
+            <td><a href="https://mdhanush11923.github.io/age-calculator-app/">Task 4 Age Calculator App</a></td>
+            <td><a href="https://github.com/mdhanush11923/age-calculator-app/">Task 4 Age Calculator GitHub</a></td>
+        </tr>
+        <tr>
+            <td><a href="https://mdhanush11923.github.io/user-table-app/">Task 5 User Table App</a></td>
+            <td><a href="https://github.com/mdhanush11923/user-table-app/">Task 5 User Table GitHub</a></td>
+        </tr>
+        <tr>
+            <td><a href="task6.html">Task 6 portfolio</a></td>
+        </tr>
+    </table>
+
+</body>
 </body>
 
 </html>
